// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`updateInputsGraphicData > calculates dimensions and position from metadata 1`] = `
{
  "height": 16,
  "id": "input1",
  "width": 24,
  "wireX": 12,
  "wireY": 24,
  "wordAlignedAddress": 5,
  "x": 0,
  "y": 16,
}
`;

exports[`updateInputsGraphicData > handles multiple inputs in line-number order 1`] = `
[
  [
    "0",
    {
      "height": 16,
      "id": "input1",
      "width": 24,
      "wireX": 12,
      "wireY": 24,
      "wordAlignedAddress": 5,
      "x": 0,
      "y": 16,
    },
  ],
  [
    "1",
    {
      "height": 16,
      "id": "input2",
      "width": 24,
      "wireX": 12,
      "wireY": 40,
      "wordAlignedAddress": 6,
      "x": 0,
      "y": 32,
    },
  ],
]
`;

exports[`updateInputsGraphicData > positions inputs at the metadata line number 1`] = `
{
  "height": 16,
  "id": "input1",
  "width": 24,
  "wireX": 12,
  "wireY": 40,
  "wordAlignedAddress": 5,
  "x": 0,
  "y": 32,
}
`;
